# sandbox

./: .bashrc  .clang-format  .eslintrc.js  .gitignore  .vimrc  README.md  mixed-stuff.md
angular/: .angular-cli.json  README.md  package-lock.json  package.json
angular-sandbox/: README.md  package-lock.json
angular-sandbox/src/app/: app.component.ts
angular/e2e/: app.e2e-spec.ts
angular/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
c/: README.md
c/01/: .gitattributes  .gitignore  CMakeLists.txt  README.md  build-standalone.sh  build.sh  cells.c  cells.h  common.sh  const.h  debug.sh  gen_gol2d.h  hash.h  main.c  menu.c  menu.h  renderer.c  renderer.h  start.sh
c/01/license/: raylib_license
c/01/src/: README.md  arena.h  cells.c  cells.h  common.h  const.c  const.h  font.c  font.h  gen_gol2d.c  main.c  menu.c  render.c  render.h  render_3d.h
c/01/src/cellular/: cells.c  cells.h  gen_gol2d.c  gen_gol2d.h
c/01/src/dstructs/: arena.c  arena.h  hash.c  hash.h  hashtable.h  hashtree.h  str.h
c/01/src/render/: font.c  font.h  menu.c  menu.h  menu_2d.c  menu_2d.h  render.c  render.h  render_2d.c  render_2d.h
c/01/tests/: test_util.h
c/01/tests/benchmark/: CMakeLists.txt  arena.c
c/01/tests/e2e/: CMakeLists.txt
c/01/tests/integration/: CMakeLists.txt
c/01/tests/scratch/: CMakeLists.txt  ray.c
c/01/tests/standalone/: CMakeLists.txt  basics.c
c/01/tests/unit/: CMakeLists.txt  arena.c
cpp/: Makefile  cl.sh  purge_artifacts.sh
cpp/01/: main.cpp
cpp/02/: main.cpp
cpp/03/: factorial.h  main.cpp
cpp/04/: Makefile  README.md  file_utils.h  main.cpp  shader.h  texture.h
cpp/04/shaders/: fragment.fs  fragment_position.fs  shade_of_blue.fs  vertex.vs
cpp/docs/: spec.md
delegate/src/: CanadianLumberjack.java  ItalianLumberjack.java  Main.java
dmat/: README.md
elixir/atbash_cipher/: .gitignore  README.md  mix.exs
elixir/atbash_cipher/config/: config.exs
elixir/atbash_cipher/lib/: atbash.ex
elixir/atbash_cipher/test/: atbash_test.exs
elixir/phoenix_hotel/: .gitignore  README.md  mix.exs
elixir/phoenix_hotel/assets/: .babelrc  package-lock.json  package.json  webpack.config.js
elixir/phoenix_hotel/assets/js/: app.js
elixir/phoenix_hotel/config/: config.exs  dev.exs  prod.exs  test.exs
elixir/phoenix_hotel/lib/: phoenix_hotel.ex  phoenix_hotel_web.ex
elixir/phoenix_hotel/lib/phoenix_hotel/: application.ex  hotels.ex  repo.ex
elixir/phoenix_hotel/lib/phoenix_hotel_web/: endpoint.ex  gettext.ex  router.ex
elixir/phoenix_hotel/priv/repo/: seeds.exs
elixir/phoenix_hotel/test/: test_helper.exs
elixir/phoenix_hotel/test/support/: channel_case.ex  conn_case.ex  data_case.ex
elixir/todo/: .gitignore  README.md  mix.exs
elixir/todo/config/: config.exs
elixir/todo/lib/: todo  todo.ex
elixir/todo/test/: todo_test.exs
emacs/: README.md  emacs.bat  init.el
factory-method/src/: OldGardenerPlant.java
heroku/: README.md
java-design-patterns/adapter/src/: Main.java  TextBook.java
java-design-patterns/bridge/src/: Paint.java  Painter.java  Square.java  Triangle.java
java-design-patterns/builder/src/: Main.java
java-design-patterns/decorator/src/: DefaultHedgehog.java  Hedgehog.java  PoisonousHedgehog.java
java-design-patterns/delegate/src/: LumberjackController.java
java-design-patterns/factory-method/src/: OldGardener.java  PlantMaker.java  PlantType.java  YoungGardenerPlant.java
java-design-patterns/singleton/src/: Main.java
java-design-patterns/visitor/src/: Main.java  Sergant.java  Soldier.java  SoldierVisitor.java  Unit.java  UnitVisitor.java
java/design-patterns/adapter/src/: Book.java  Lexicon.java  LexiconAdapter.java  Main.java  Person.java  TextBook.java
java/design-patterns/bridge/src/: Color.java  Main.java  Paint.java  Painter.java  Shape.java  Square.java  Triangle.java
java/design-patterns/builder/src/: Builder.java  Main.java  Person.java
java/design-patterns/decorator/src/: DefaultHedgehog.java  Hedgehog.java  Main.java  PoisonousHedgehog.java
java/design-patterns/delegate/src/: CanadianLumberjack.java  ItalianLumberjack.java  Lumberjack.java  LumberjackController.java  Main.java
java/design-patterns/factory-method/src/: Main.java  OldGardener.java  OldGardenerPlant.java  Plant.java  PlantMaker.java  PlantType.java  YoungGardener.java  YoungGardenerPlant.java
java/design-patterns/singleton/src/: Election.java  Main.java  President.java
java/design-patterns/visitor/src/: Commander.java  CommanderVisitor.java  Main.java  Sergant.java  SergantVisitor.java  Soldier.java  SoldierVisitor.java  Unit.java  UnitVisitor.java
kotlin/kotlin_todo/: .gitignore  build.gradle  settings.gradle
kubernetes/: README.md
math/matrices/: README.md
math/vectors/: README.md
microservices/: README.md
python/: README.md
python/data-analysis-with-python/: README.md
python/machine-learning-with-python/: README.md
python/machine-learning-with-python/book-recommendation-engine/: README.md
python/machine-learning-with-python/cat-and-dog-image-classifier/: README.md
python/machine-learning-with-python/rock-paper-scissors/: README.md
python/machine-learning-with-python/tensorflow/: .gitignore  start.sh
python/machine-learning-with-python/tensorflow/01/: README.md
python/machine-learning-with-python/tensorflow/02/: README.md  main.py
python/machine-learning-with-python/tensorflow/03/: README.md
python/machine-learning-with-python/tensorflow/04/: README.md  main.py
python/machine-learning-with-python/tensorflow/05/: README.md  main.py
python/machine-learning-with-python/tensorflow/06/: README.md  main.py
python/machine-learning-with-python/tensorflow/07/: README.md  main.py
python/machine-learning-with-python/tensorflow/08/: README.md  main.py
python/machine-learning-with-python/tensorflow/09/: README.md
python/practice/: index.py  text.txt
python/scientific-computing-with-python/: README.md
python/sort-dates/: index.py
sandbox/: package-lock.json  package.json
sandbox/src/app/: app.component.html  app.component.ts
(+65 files in other folders)
